--- a/sinatra/hello/Gemfile
+++ b/sinatra/hello/Gemfile
@@ -3,7 +3,15 @@
 source "https://rubygems.org"
 
 # gem "rails"
-gem "thin"
+# gem "thin"
 gem "puma"
 gem "falcon"
-gem 'data_mapper'
+#gem 'data_mapper'
+
+gem 'sinatra',            '1.4.8'
+gem 'data_mapper',        '1.2.0'
+gem 'dm-sqlite-adapter',  '1.2.0'
+gem 'json',               '~>1.6'
+gem 'shotgun',            '0.9.2'
+gem 'slim',               '3.0.8'
+gem 'thin',               '1.7.0'
